--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
+    "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
