--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "duyun",
+  "name": "waterfall",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --hot --config webpack.dev.config.js",
-    "dev": "webpack --config webpack.dev.config.js"
+    "start": "webpack-dev-server --env=dev",
+    "dist": "gulp move & webpack --env=dist"
   },
   "author": "",
   "license": "ISC",
@@ -17,13 +17,21 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "bower-webpack-plugin": "^0.1.9",
     "css-loader": "^0.25.0",
+    "eslint": "^3.8.1",
+    "eslint-loader": "^1.6.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "html-webpack-plugin": "^2.22.0",
-    "jquery": "^3.1.1",
+    "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "minimist": "^1.2.0",
     "postcss-loader": "^1.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
