--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "minimist": "^1.2.0",
-    "postcss-loader": "^1.0.0",
+    "postcss-loader": "^1.1.1",
+    "postcss-modules-values": "^1.2.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
